--- a/views/forgetchangepassword.ejs
+++ b/views/forgetchangepassword.ejs
@@ -15,9 +15,75 @@
 
 <body>
     <%- include('navbar') %>
-    <h1>Request Password Reset</h1>
+    <!-- <h1>Request Password Reset</h1> -->
     <% if(user) { %>
-        <form action="/forgetchangepassword/<%= user.id_user %>" method="post">
+        <div style="background-color: rgb(219, 218, 218); height: 100vh;">
+            <div class="container py-5 h-100" >
+              <p class="label-profile">Password</p>
+
+
+
+              <div class="row" style="justify-content:center ;">
+            
+                <div class="col-lg-6">
+                  <div class="card  p-5 " >
+                  <div class="card">
+                    <div class="card-body">
+                        <form action="/forgetchangepassword/<%= user.id_user %>" method="post">
+                      <div class="row">
+                        <div class="col-sm-5">
+                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" name="otp" id="otp"  placeholder="otp"/>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-sm-5">
+                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="password" name="password" id="password"  placeholder="New Password"/>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-sm-5">
+                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
+                        </div>
+                      </div>
+                      <hr>
+                      <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh ;" data-mdb-ripple-color="dark">save</button>
+                      
+                    </div>
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <form action="/forgetchangepassword/<%= user.id_user %>" method="post">
 
             <label for="text">OTP:</label>
             <input type="text" name="otp" id="otp" value="" placeholder="otp" />
@@ -29,10 +95,63 @@
             <input type="password" name="confirmpassword" id="confirmpassword" value=""
                 placeholder="Confirm Password" />
             <button type="submit">Submit</button>
-        </form>
+        </form> -->
         <% } else if (company) { %>
 
-            <form action="/forgetchangepassword/<%= company.id_company %>" method="post">
+
+
+
+            <div style="background-color: rgb(219, 218, 218); height: 100vh;">
+                <div class="container py-5 h-100" >
+                  <p class="label-profile">Password</p>
+    
+    
+    
+                  <div class="row" style="justify-content:center ;">
+                
+                    <div class="col-lg-6">
+                      <div class="card  p-5 " >
+                      <div class="card">
+                        <div class="card-body">
+                            <form action="/forgetchangepassword/<%= company.id_company %>" method="post">
+                          <div class="row">
+                            <div class="col-sm-5">
+                              <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
+                            </div>
+                            <div class="col-sm-4">
+                                <input type="text" name="otp" id="otp"  placeholder="otp"/>
+                            </div>
+                          </div>
+                          <hr>
+                          <div class="row">
+                            <div class="col-sm-5">
+                              <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
+                            </div>
+                            <div class="col-sm-4">
+                                <input type="password" name="password" id="password"  placeholder="New Password"/>
+                            </div>
+                          </div>
+                          <hr>
+                          <div class="row">
+                            <div class="col-sm-5">
+                              <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
+                            </div>
+                            <div class="col-sm-4">
+                                <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
+                            </div>
+                          </div>
+                          <hr>
+                          <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh ;" data-mdb-ripple-color="dark">save</button>
+                          
+                        </div>
+                      </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <!-- <form action="/forgetchangepassword/<%= company.id_company %>" method="post">
                 <label for="text">OTP:</label>
                 <input type="text" name="otp" id="otp" value="" placeholder="otp" />
 
@@ -43,9 +162,59 @@
                 <input type="password" name="confirmpassword" id="confirmpassword" value=""
                     placeholder="Confirm Password" />
                 <button type="submit">Submit</button>
-            </form>
+            </form> -->
             <% }else { %>
-                <form action="/forgetchangepassword/" method="post">
+                <div style="background-color: rgb(219, 218, 218); height: 100vh;">
+                    <div class="container py-5 h-100" >
+                      <p class="label-profile">Password</p>
+        
+        
+        
+                      <div class="row" style="justify-content:center ;">
+                    
+                        <div class="col-lg-6">
+                          <div class="card  p-5 " >
+                          <div class="card">
+                            <div class="card-body">
+                                <form action="/forgetchangepassword/" method="post">
+                              <div class="row">
+                                <div class="col-sm-5">
+                                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
+                                </div>
+                                <div class="col-sm-4">
+                                    <input type="text" name="otp" id="otp"  placeholder="otp"/>
+                                </div>
+                              </div>
+                              <hr>
+                              <div class="row">
+                                <div class="col-sm-5">
+                                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
+                                </div>
+                                <div class="col-sm-4">
+                                    <input type="password" name="password" id="password"  placeholder="New Password"/>
+                                </div>
+                              </div>
+                              <hr>
+                              <div class="row">
+                                <div class="col-sm-5">
+                                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
+                                </div>
+                                <div class="col-sm-4">
+                                    <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
+                                </div>
+                              </div>
+                              <hr>
+                              <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh ;" data-mdb-ripple-color="dark">save</button>
+                              
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                <!-- <form action="/forgetchangepassword/" method="post">
                     <label for="text">OTP:</label>
                     <input type="text" name="otp" id="otp" value="" placeholder="otp" />
 
@@ -56,7 +225,7 @@
                     <input type="password" name="confirmpassword" id="confirmpassword" value=""
                         placeholder="Confirm Password" />
                     <button type="submit">Submit</button>
-                </form>
+                </form> -->
                 <% } %>
 </body>
 
