--- a/views/forgetreset.ejs
+++ b/views/forgetreset.ejs
@@ -17,7 +17,7 @@
       <%= otp %>
     </h2>
     <p>
-      You can reset your password by clicking the link below and filling in the OTP:<%= content %>
+      You can reset your password by clicking the link below and filling in the OTP:<%= otp %>
     </p>
     <div class="btn btn-pink"><a class="text-my-own-color"
         href="http://localhost:5000/forgetchangepassword/<%= content %>"> Reset your password </a></div>
