--- a/views/profileadmin.ejs
+++ b/views/profileadmin.ejs
@@ -70,7 +70,7 @@ border-color: #007BFF; /* Change border color when focused */
 
 
 
-  <section style="background-color: #eeeeee;">
+  <section style="background-color: #eeeeee; height: 100vh;">
     <form   action="/admin/updateprofile/<%= admin.id_admin %>" method="post" enctype="multipart/form-data">
     
         <div class="container py-5 h-100">
