--- a/views/profilecompany.ejs
+++ b/views/profilecompany.ejs
@@ -71,7 +71,7 @@ border-color: #007BFF; /* Change border color when focused */
     
 
 
-        <section style="background-color: #eeeeee;">
+        <section style="background-color: #eeeeee;  height: 100vh;">
           <form action="/company/updateprofile/<%= company.id_company %>" method="post" enctype="multipart/form-data">
           
               <div class="container py-5 h-100">
