--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -11,13 +11,59 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
+  <style>.form-control-input {
+ 
+    padding: 2px; /* Add some padding */
+    margin: 5px 0; /* Add margin at the top and bottom */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    border: 1px solid #981818; /* Add a border */
+    border-radius: 4px; /* Add rounded corners */
+  }
+  .label-profile{
+  width: 117px;
+  padding-top: 7px;
+height: 35px;
+flex-shrink: 0;
+background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
+text-align-last: center;
+}
+</style>  
 </head>
 
 <body>
   <%- include('navbar') %>
   <% if(user) { %>
+    <div style="background-color: rgb(219, 218, 218); height: 100vh;">
+    <div class="container py-5 h-100" >
+      <p class="label-profile">Password</p>
+    
+          <div class="row" style="justify-content:center ;">
+            
+            <div class="col-lg-6">
+              <div class="card  p-5 " >
+              <div class="card">
+                <div class="card-body">
+                  <form action="/user/resetpassword/<%= user.email %>" method="post">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="email" id="email" name="email" class="form-control-input" placeholder="Enter Email"/>
+                    </div>
+                  </div>
+                  <hr>
+                  <button type="submit" class="btn btn-primary">save</button>
+                </form>
+                </div>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <form action="/user/resetpassword/<%= user.email %>" method="post">
+        <!-- <form action="/user/resetpassword/<%= user.email %>" method="post">
 
           <div class="inputbox-regis">
             <label for="email">email</label>
@@ -25,9 +71,38 @@
           </div>
           <button type="submit" class="btn btn-primary">save</button>
 
-        </form>
+        </form> -->
         <% } else if (company) { %>
-          <form action="/company/resetpassword/<%= company.email %>" method="post">
+          <div style="background-color: rgb(219, 218, 218); height: 100vh;">
+            <div class="container py-5 h-100" >
+              <p class="label-profile">Password</p>
+
+                <div class="row" style="justify-content:center ;">
+                  
+                  <div class="col-lg-6">
+                    <div class="card  p-5 " >
+                    <div class="card">
+                      <div class="card-body">
+                        <form action="/company/resetpassword/<%= company.email %>" method="post">
+                        <div class="row">
+                          <div class="col-sm-3">
+                            <p class="mb-0"  style="margin-left: 4vh; margin-top: 1vh;">Email</p>
+                          </div>
+                          <div class="col-sm-9">
+                            <input type="email" id="email" name="email" placeholder="Enter Email"/>
+                          </div>
+                        </div>
+                        <hr>
+                        <button type="submit" class="btn btn-primary">save</button>
+                      </form>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+             
+
+          <!-- <form action="/company/resetpassword/<%= company.email %>" method="post">
 
             <div class="inputbox-regis">
               <label for="email">email</label>
@@ -35,7 +110,7 @@
             </div>
             <button type="submit" class="btn btn-primary">save</button>
   
-          </form>
+          </form> -->
           <% }else { %>
 
             <% } %>
