--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,50 +1,32 @@
+<!-- Footer -->
+
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="container-fluid" style="background-color: #929fba">
   <!-- Footer -->
-  
-
-
-
-
-
-
-
-
-
-
-
-  
-  
-
-
-  <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container my-1">
-  <!-- Footer -->
-  <footer
-          class="text-center text-lg-start text-white"
-          style="background-color: #929fba"
-          >
+  <footer class="text-center text-lg-start text-white" >
     <!-- Grid container -->
-    <div class="container p-4 pb-0">
-      <!-- Section: Links -->
-      <section class="">
-        <!--Grid row-->
-        <div class="row">
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h6 class="text-uppercase mb-4 font-weight-bold">
-              <%= webpage[0].namepage %>
-            </h6>
-            <p>
-              Here you can use rows and columns to organize your footer
-              content. Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit.
-            </p>
-          </div>
-          <!-- Grid column -->
+    <!-- <div class="container p-6 pb-0"> -->
+    <!-- Section: Links -->
+    <section class="">
+      <!--Grid row-->
+      <div class="row">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">
+            <%= webpage[0].namepage %>
+          </h6>
+          <p>
+            Here you can use rows and columns to organize your footer
+            content. Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit.
+          </p>
+        </div>
+        <!-- Grid column -->
 
-          <hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none" />
 
-          <!-- Grid column -->
-          <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <!-- Grid column -->
+        <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
             <p>
               <a class="text-white">MDBootstrap</a>
@@ -59,90 +41,66 @@
               <a class="text-white">Bootstrap Angular</a>
             </p>
           </div> -->
-          <!-- Grid column -->
+        <!-- Grid column -->
 
-          <hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none" />
 
-          <!-- Grid column -->
-          <hr class="w-100 clearfix d-md-none" />
-        
+        <!-- Grid column -->
+        <hr class="w-100 clearfix d-md-none" />
 
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-            <p><i class="fas fa-home mr-3"></i> <%= webpage[0].address %></p>
-            <p><i class="fas fa-envelope mr-3"></i><%= webpage[0].email %></p>
-            <p><i class="fas fa-phone mr-3"></i><%= webpage[0].call %></p>
-            
-          </div>
-          <!-- Grid column -->
 
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+          <p><i class="fas fa-home mr-3"></i>
+            <%= webpage[0].address %>
+          </p>
+          <p><i class="fas fa-envelope mr-3"></i>
+            <%= webpage[0].email %>
+          </p>
+          <p><i class="fas fa-phone mr-3"></i>
+            <%= webpage[0].call %>
+          </p>
 
-            <!-- Facebook -->
-            <a
-               class="btn btn-primary btn-floating m-1 rounded-circle"
-               style="background-color: #3b5998"
-               href="#!"
-               role="button"
-               ><i class="fab fa-facebook-f"></i
-              ></a>
-
-            <!-- Twitter -->
-            <a
-               class="btn btn-primary btn-floating m-1 rounded-circle"
-               style="background-color: #55acee"
-               href="#!"
-               role="button"
-               ><i class="fab fa-twitter"></i
-              ></a>
-
-            <!-- Google -->
-            <a
-               class="btn btn-primary btn-floating m-1 rounded-circle"
-               style="background-color: #dd4b39"
-               href="#!"
-               role="button"
-               ><i class="fab fa-google"></i
-              ></a>
-
-            <!-- Instagram -->
-            <a
-               class="btn btn-primary btn-floating m-1 rounded-circle"
-               style="background-color: #ac2bac"
-               href="#!"
-               role="button"
-               ><i class="fab fa-instagram"></i
-              ></a>
-
-            <!-- Linkedin -->
-            <a
-               class="btn btn-primary btn-floating m-1 rounded-circle"
-               style="background-color: #0082ca"
-               href="#!"
-               role="button"
-               ><i class="fab fa-linkedin-in"></i
-              ></a>
-            <!-- Github -->
-            <a
-               class="btn btn-primary btn-floating m-1 rounded-circle"
-               style="background-color: #333333"
-               href="#!"
-               role="button"
-               ><i class="fab fa-github"></i
-              ></a>
-          </div>
         </div>
-        <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
-    </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+
+          <!-- Facebook -->
+          <a class="btn btn-primary btn-floating m-1 rounded-circle" style="background-color: #3b5998" href="https://www.facebook.com/profile.php?id=100008180618409"
+            role="button"><i class="fab fa-facebook-f"></i></a>
+
+          <!-- Twitter -->
+          <!-- <a class="btn btn-primary btn-floating m-1 rounded-circle" style="background-color: #55acee" href="#!"
+            role="button"><i class="fab fa-twitter"></i></a> -->
+
+          <!-- Google -->
+          <!-- <a class="btn btn-primary btn-floating m-1 rounded-circle" style="background-color: #dd4b39" href="#!"
+            role="button"><i class="fab fa-google"></i></a> -->
+
+          <!-- Instagram -->
+          <!-- <a class="btn btn-primary btn-floating m-1 rounded-circle" style="background-color: #ac2bac" href="#!"
+            role="button"><i class="fab fa-instagram"></i></a> -->
+
+          <!-- Linkedin -->
+          <a class="btn btn-primary btn-floating m-1 rounded-circle" style="background-color: #0082ca" href="https://www.linkedin.com/in/jirawat-rakcharoenporn-75b4b3268/"
+            role="button"><i class="fab fa-linkedin-in"></i></a>
+          <!-- Github -->
+          <a class="btn btn-primary btn-floating m-1 rounded-circle" style="background-color: #333333" href="https://github.com/Aftershock123"
+            role="button"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+      <!--Grid row-->
+    </section>
+    <!-- Section: Links -->
+    <!-- </div> -->
     <!-- Grid container -->
 
     <!-- Copyright -->
-   
+
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
