--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -17,7 +17,37 @@
  
   
   <%- include('navbar') %>
-        <form action="/forget/:email" method="post">
+  <div style="background-color: rgb(219, 218, 218); height: 100vh;">
+    <div class="container py-5 h-100" >
+      <p class="label-profile">Password</p>
+
+      <div class="row" style="justify-content:center ;">
+            
+        <div class="col-lg-6">
+          <div class="card  p-5 " >
+          <div class="card">
+            <div class="card-body">
+              <form action="/forget/:email" method="post">
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
+                </div>
+                <div class="col-sm-9">
+                  <input type="email" id="email" name="email" placeholder="Enter Email"/>
+                </div>
+              </div>
+              <hr>
+              <button type="submit" class="btn btn-primary">save</button>
+            </form>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+        <!-- <form action="/forget/:email" method="post">
 
           <div class="inputbox-regis">
             <label for="email">email</label>
@@ -27,7 +57,7 @@
 
 
 
-        </form>
+        </form> -->
 
 
 
