--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -1,139 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>registerUser</title>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript"
-      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
-    <script type="text/javascript"
-      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
-  
-    <link rel="stylesheet"
-      href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
-    <script type="text/javascript"
-      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
-  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>registerUser</title>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
+  <script type="text/javascript"
+    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
+  <script type="text/javascript"
+    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
+
+  <link rel="stylesheet"
+    href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
+  <script type="text/javascript"
+    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href=".css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script> -->
+  <style>
+    .label-profile {
+      width: 117px;
+      padding-top: 7px;
+      height: 35px;
+      flex-shrink: 0;
+      background: linear-gradient(180deg, #5D406A 0%, rgba(106, 64, 64, 0.00) 100%);
+      text-align-last: center;
+    }
+
+    .con-mar {
+      margin-right: 36px;
+    }
+
+    .section-container {
+      display: flex;
+      justify-content: center;
+      /* align-items: center; */
+      /* height : 100vh;  */
+      background-color: #cfcdcd;
+    }
+  </style>
 </head>
+
 <body>
-<!--if resume.id_user ==undefined ให้แสดงหน้าaddแต่ถ้าไม่ให้แสดงhistory -->
-<%- include('navbar') %>
-<% if(resume == 'undefined' || resume == null) { %>
-  <form action="/user/addresume/<%= user.id_user %>" method="post">
+  <!--if resume.id_user ==undefined ให้แสดงหน้าaddแต่ถ้าไม่ให้แสดงhistory -->
+  <%- include('navbar') %>
 
-    <div class="inputbox-regis">
-      <input type="text" id="professional_summary"  name="professional_summary" />
-      <label for="professional_summary">professional_summary</label>
-    </div>
-    <div class="inputbox-regis">
-     <ion-icon name="mail-outline"></ion-icon>
-     <input type="text" id="work_experience" name= "work_experience" />
-     <label for="work_experience">work_experience</label>
+    <% if(resume=='undefined' || resume==null) { %>
+      <div class="container py-5 h-100">
+        <p class="label-profile">Resume</p>
+
       </div>
 
 
 
-
-      <div class="inputbox-regis">
-        <input type="text" id="skills"  name="skills" />
-        <label for="skills">skills</label>
-      </div>
-      <div class="inputbox-regis">
-       <ion-icon name="mail-outline"></ion-icon>
-       <input type="text" id="education" name= "education"/>
-       <label for="education">education</label>
-        </div>
+      <form action="/user/addresume/<%= user.id_user %>" method="post">
+      <div class="row" style="justify-content:center;">
 
 
-
-        <div class="inputbox-regis">
-          <input type="text" id="languages"  name="languages"  />
-          <label for="languages">languages</label>
-        </div>
-        <div class="inputbox-regis">
-         <ion-icon name="mail-outline"></ion-icon>
-         <input type="text" id="interests" name= "interests" />
-         <label for="interests">interests</label>
+          <div class="col-lg-6">
+            <div class="card p-5">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Professional Summary</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="text" id="professional_summary" name="professional_summary" />
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Work Experience</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="text" id="work_experience" name="work_experience" />
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Skills</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="text" id="skills" name="skills" />
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Education</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="text" id="education" name="education" />
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Languages</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="text" id="languages" name="languages" />
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Interests</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="text" id="interests" name="interests" />
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Contact</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <input type="text" id="contact" name="contact" />
+                    </div>
+                  </div>
+                  <hr>
+                  <button type="submit" class="btn btn-primary">save</button>
+                </div>
+              </div>
+            </div>
           </div>
-
-          <div class="inputbox-regis">
-            <input type="text" id="contact"  name="contact"  />
-            <label for="contact">contact</label>
-          </div>
-        
-        <button type="submit" class="btn btn-primary">save</button>
-
+        </div>
       </form>
-<% } else  { %>
+      <% } else { %>
+        <section style="background-color: #eeeeee; ">
+        <div class="container py-5 h-100">
+          <p class="label-profile">Resume</p>
 
- <form action="/user/updateresume/<%= user.id_user %>" method="post">
-
-    <div class="inputbox-regis">
-      <input type="text" id="professional_summary"  name="professional_summary" value="<%= resume.professional_summary %>" />
-      <label for="professional_summary">professional_summary</label>
-    </div>
-    <div class="inputbox-regis">
-     <ion-icon name="mail-outline"></ion-icon>
-     <input type="text" id="work_experience" name= "work_experience"value="<%= resume.work_experience %>" />
-     <label for="work_experience">work_experience</label>
-      </div>
-
-
-
-
-      <div class="inputbox-regis">
-        <input type="text" id="skills"  name="skills" value="<%= resume.skills %>" />
-        <label for="skills">skills</label>
-      </div>
-      <div class="inputbox-regis">
-       <ion-icon name="mail-outline"></ion-icon>
-       <input type="text" id="education" name= "education"value="<%= resume.education %>" />
-       <label for="education">education</label>
         </div>
 
+        <form action="/user/updateresume/<%= user.id_user %>" method="post">
+        <div class="row" style="justify-content:center ;">
 
-
-        <div class="inputbox-regis">
-          <input type="text" id="languages"  name="languages" value="<%= resume.languages %>" />
-          <label for="languages">languages</label>
-        </div>
-        <div class="inputbox-regis">
-         <ion-icon name="mail-outline"></ion-icon>
-         <input type="text" id="interests" name= "interests"value="<%= resume.interests %>" />
-         <label for="interests">interests</label>
+            <div class="col-lg-6">
+              <div class="card  p-5">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Professional Summary</p>
+                      </div>
+                      <div class="col-sm-9">
+                        <input type="text" id="professional_summary" name="professional_summary"
+                          value="<%= resume.professional_summary %>" />
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Work Experience</p>
+                      </div>
+                      <div class="col-sm-9">
+                        <input type="text" id="work_experience" name="work_experience"
+                          value="<%= resume.work_experience %>" />
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Skills</p>
+                      </div>
+                      <div class="col-sm-9">
+                        <input type="text" id="skills" name="skills" value="<%= resume.skills %>" />
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Education</p>
+                      </div>
+                      <div class="col-sm-9">
+                        <input type="text" id="education" name="education" value="<%= resume.education %>" />
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Languages</p>
+                      </div>
+                      <div class="col-sm-9">
+                        <input type="text" id="languages" name="languages" value="<%= resume.languages %>" />
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Interests</p>
+                      </div>
+                      <div class="col-sm-9">
+                        <input type="text" id="interests" name="interests" value="<%= resume.interests %>" />
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <p class="mb-0">Contact</p>
+                      </div>
+                      <div class="col-sm-9">
+                        <input type="text" id="contact" name="contact" value="<%= resume.contact %>" />
+                      </div>
+                    </div>
+                    <hr>
+                    <button type="submit" class="btn btn-outline-primary"  style="margin-left: 70vh;" data-mdb-ripple-color="dark">Submit</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+        </form>
+        </section>
+        <% } %>
 
-          <div class="inputbox-regis">
-            <input type="text" id="contact"  name="contact" value="<%= resume.contact %>" />
-            <label for="contact">contact</label>
-          </div>
-        
-        <!-- <div class="inputbox-regis">
-          <ion-icon name="mail-outline"></ion-icon>
-          <input type="password" id="password" autocomplete="off" required>
-          <label for="password">Password</label>
-        </div> -->
-        <button type="submit" class="btn btn-primary">save</button>
+          <script>
 
-      </form>
-<% } %>
-<script>
+            $.Thailand({
+              $district: $('#district_company'), // input ของตำบล//ใช้idแต่ละinput
+              $amphoe: $('#amphoe'), // input ของอำเภอ ยังไม่มีในdb
+              $province: $('#province_company'), // input ของจังหวัด
+              $zipcode: $('#zipcode_company'), // input ของรหัสไปรษณีย์
+            });
 
-  $.Thailand({
-    $district: $('#district_company'), // input ของตำบล//ใช้idแต่ละinput
-    $amphoe: $('#amphoe'), // input ของอำเภอ ยังไม่มีในdb
-    $province: $('#province_company'), // input ของจังหวัด
-    $zipcode: $('#zipcode_company'), // input ของรหัสไปรษณีย์
-  });
-
-</script>
+          </script>
 </body>
 
 </html>
