--- a/views/webpage.ejs
+++ b/views/webpage.ejs
@@ -8,38 +8,125 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .gradient-custom {
+      /* fallback for old browsers */
+      background: #f6d365;
+      
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
+      
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
+      
+      }
+      .colorless-input {
+  background-color: transparent;
+  border: none;
+}
+.border-custom {
+  margin-top: 9px;
+  margin-bottom: 9px;
+  text-align-last: center;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border: 2px solid rgb(0, 0, 0); /* Change the border style and color as needed */
+  border-radius: 5px; /* Optional: Add rounded corners */
+}
+.label-profile{
+  width: 117px;
+  padding-top: 7px;
+height: 35px;
+flex-shrink: 0;
+background: linear-gradient(180deg, #7E12C1 0%, rgba(126, 18, 193, 0.00) 100%);
+
+
+text-align-last: center;
+}
+.input-mid{
+  padding-left:35px ;
+  margin-bottom: 10px;
+}
+.form-control-input {
+ 
+  padding: 10px; /* Add some padding */
+  margin: 5px 0; /* Add margin at the top and bottom */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  border: 1px solid #981818; /* Add a border */
+  border-radius: 4px; /* Add rounded corners */
+}
+
+/* Style for when the input is focused */
+.form-control-input {
+  border-color: #007BFF; /* Change border color when focused */
+}
+
+</style>
+</head>
 <body>
   <%- include('navbar') %>
+  <section style="background-color: #eeeeee; ">
+    
+    <div class="container py-5 h-100">
+      <p class="label-profile">Webpage</p>
+    </div>
     <form action="/admin/editwebpage/<%= eweb.id_webpage %>" method="post">
-        <!-- <img class="card" src="/image/<%= webpage.image %>" alt="webpage Logo"/> -->
-
-
-        <div >
-          <input type="text" id="namepage"  name="namepage" value="<%= eweb.namepage %>"/>
-          <label for="namepage">namepage</label>
-        </div>
-        <div>
-         <ion-icon name="mail-outline"></ion-icon>
-         <input type="text" id="address" name= "address" value="<%= eweb.address %>" />
-         <label for="address">address</label>
-          </div>
-         
-    
-          <div >
-            <input type="text" id="email"  name="email" value="<%= eweb.email %>"/>
-            <label for="email">email</label>
-          </div>
-          <div >
-           <ion-icon name="mail-outline"></ion-icon>
-           <input type="text" id="call" name= "call" value="<%= eweb.call %>"/>
-           <label for="call">call</label>
+    <div class="row" style="justify-content:center; height: 100vh;">
+        <div class="col-lg-6">
+          <div class="card p-5">
+            <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <p class="mb-0">Name Page</p>
+                  </div>
+                  <div class="col-sm-9">
+                    <input type="text" id="namepage"  name="namepage" value="<%= eweb.namepage %>"/>
+                  </div>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class="col-sm-3">
+                    <p class="mb-0">Address</p>
+                  </div>
+                  <div class="col-sm-9" >
+                    <input type="text" id="address" name= "address" style="padding-bottom:20vh ; padding-right: 20vh;" value="<%= eweb.address %>" />
+                  
+                  </div>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class="col-sm-3">
+                    <p class="mb-0">Email</p>
+                  </div>
+                  <div class="col-sm-9">
+                    <input type="text" id="email"  name="email" style="padding-right: 20vh;" value="<%= eweb.email %>"/>
+                  </div>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class="col-sm-3">
+                    <p class="mb-0">Tol</p>
+                  </div>
+                  <div class="col-sm-9">
+                    <input type="text" id="call" name= "call" value="<%= eweb.call %>"/>
+                  </div>
+                </div>
+                <hr>
+                <div class="row" >
+                  
+                  <div class="col-sm-12" >
+                    
+                    <button type="submit" class="btn btn-outline-primary"  style="margin-left: 70vh;" data-mdb-ripple-color="dark">Submit</button>
+                  </div>
+                </div>
+              </div>
             </div>
-    
-    
-    
-            <button type="submit" class="btn btn-primary">save</button>
-    
-          </form>
+          </div>
+        </div>
+      </div>
+    </form>
+  </section>
 
 </body>
 </html>
